--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 BOT_TOKEN=8119451118:AAHNcK9zOYlzMkTkyF5TR3MXFOg1H6tMq74
 
 # Admin Telegram usernames (comma-separated)
-ADMIN_USERNAMES=admin,owner,your_username
+ADMIN_USERNAMES=admin,owner,altheric
 
 # Website URL for links
 WEBSITE_URL=https://your-domain.com
