--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,6 @@
     "BOT_TOKEN": "8119451118:AAHNcK9zOYlzMkTkyF5TR3MXFOg1H6tMq74",
     "ADMIN_USERNAMES": "admin,owner,altheric",
     "NODE_ENV": "production",
-    "WEBSITE_URL": "https://my-collection-xix.vercel.app"
+    "WEBSITE_URL": "https://my-collection-xix-vvv.vercel.app"
   }
 }
