--- a/netlify.toml
+++ b/netlify.toml
@@ -29,5 +29,5 @@
 [build.environment]
   NODE_VERSION = "18"
   BOT_TOKEN = "8119451118:AAHNcK9zOYlzMkTkyF5TR3MXFOg1H6tMq74"
-  ADMIN_USERNAMES = "admin,owner,authorized"
-  WEBSITE_URL = "https://your-site.netlify.app"
+  ADMIN_USERNAMES = "admin,owner,altheric"
+  WEBSITE_URL = "https://my-collection-xix-vvv.netlify.app"
