--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ NODE_ENV=production
 PORT=3000
 
 # Webhook URL (for production)
-WEBHOOK_URL=https://your-domain.com/webhook
+WEBHOOK_URL=https://my-collection-xix-vvv.vercel/webhook
