--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ BOT_TOKEN=8119451118:AAHNcK9zOYlzMkTkyF5TR3MXFOg1H6tMq74
 ADMIN_USERNAMES=admin,owner,altheric
 
 # Website URL for links
-WEBSITE_URL=https://your-domain.com
+WEBSITE_URL=https://my-collection-xix-vvv.vercel
 
 # Node Environment
 NODE_ENV=production
